--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <section id="header">
 <div class="container text-center">
 <div class="user-box">
-<img src="img/HEAD1.JPG">
+<img src="img/HEAD1.jpg">
 <h1>Brendan Hennessy</h1>
 <p>Biomedical Engineering Student</p>
 </div>
