--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <div class="about container" id="about">
 <div class="row">
 <div class="col-md-6 text-center">
-<img src="img/HEAD1.jpg" class="profile-img">
+<img src="img/HEAD.jpg" class="profile-img">
 </div>
 <div class="col-md-6">
 <h3>WHO AM I?</h3>
