--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <section id="header">
 <div class="container text-center">
 <div class="user-box">
-<img src="img/headshot.jpg">
+<img src="img/headshotfinal.PNG">
 <h1>Brendan Hennessy</h1>
 <p>Biomedical Engineering Student</p>
 </div>
@@ -94,7 +94,7 @@
 <div class="about container" id="about">
 <div class="row">
 <div class="col-md-6 text-center">
-<img src="img/headshotfinal.PNG" class="profile-img">
+<img src="img/headshot.jpg" class="profile-img">
 </div>
 <div class="col-md-6">
 <h3>WHO AM I?</h3>
