Resume Update for Web

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ Currently seeking an internship or entry-level opportunity in a position that en
 </p>
 <h4>My Skills</h4>
 <div class="skills-bar">
-<p>Understanding of Python and MATLAB</p>
+<p>Understanding of Python, MATLAB, HTML and CSS</p>
 <div class="progress">
 <div class="progress-bar" style="width: 100%;"></div>
 </div>
